Исправлена проблема со стилем (ранее не включена в html)

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная -Avesto Innovations</title>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
 </head>
 <body>
 <img class='logo' src="https://i.ibb.co/kcM5L1J/avesto-innovations-1.png" alt="avesto-innovations-1" border="0"
