Добавлен viewport meta tag (mobile responsive)

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Главная -Avesto Innovations</title>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <img class='logo' src="https://i.ibb.co/kcM5L1J/avesto-innovations-1.png" alt="avesto-innovations-1" border="0"
