Исправлена ссылка на Instagram страницу в href

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class='social-medias'>
-    <a class='sm-link' href='instagram.com/avesto.innovations'>Instagram</a>
+    <a class='sm-link' href='https://instagram.com/avesto.innovations'>Instagram</a>
     <a class='sm-link' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
 </div>
 </body>
