Добавлена ссылка на Telegram канал

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
 
 <div class='social-medias'>
     <a class='sm-link' href='https://instagram.com/avesto.innovations'>Instagram</a>
+    <a class="sm-link" href="https://www.t.me/avestoinn">Telegram</a>
     <a class='sm-link' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
 </div>
 </body>
