--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<img class='logo' src="https://i.ibb.co/kcM5L1J/avesto-innovations-1.png" alt="avesto-innovations-1" border="0"
+<img class='logo' src="/static/logo.png" alt="avesto-innovations-1" border="0"
      width='128'>
 
 
