--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Главная -Avesto Innovations</title>
-    <link rel="stylesheet" href="./style.css" type="text/css"/>
+    <title>Главная - Avesto Innovations</title>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
