--- a/static/style.css
+++ b/static/style.css
@@ -26,9 +26,9 @@ body {
 }
 
 div.social-medias {
-  display: inline-block;
   margin-top: 10px;
-  justify-content: space-between;
+  grid-row: 4/5;
+  grid-column: 1/4;
 }
 
 a.sm-link {
