Grid bugs fixed

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ body {
   display: grid;
   grid-auto-flow: row dense;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 2fr 2fr 1fr;
+  grid-template-rows: 2fr 2fr 1fr 2fr;
   align-items: stretch;
   justify-items: center;
 }
