--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Главная - Avesto Innovations</title>
     <link rel="stylesheet" href="/static/style.css" type="text/css"/>
+     <link rel="shortcut icon" href="/static/icon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
