--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,9 @@
 
 <div class='social-medias'>
     <a class='sm-link' href='https://instagram.com/avesto.innovations'>Instagram</a>
-    <a class="sm-link" href="https://www.t.me/avestoinn">Telegram</a>
-    <a class='sm-link' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
+    <a class="sm-link" href="https://www.t.me/avestoinn">Telegram</a><br/>
+    <a class="secondary-button" href="tel://992900801441">Позвонить</a>
+    <a class='secondary-button' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
 </div>
 </body>
 </html>
