--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,16 @@
     </p>
 </div>
 
-<div class='social-medias'>
-    <a class='sm-link' href='https://instagram.com/avesto.innovations'>Instagram</a>
-    <a class="sm-link" href="https://www.t.me/avestoinn">Telegram</a><br/>
+<div class='actions'>
     <a class="secondary-button" href="tel://992900801441">Позвонить</a>
     <a class='secondary-button' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
+</div>
+
+<div class="social-medias">
+    <a href="https://facebook.com/avesto.inn"><img src="/static/icons/social/045-facebook.svg" width="32"></a>
+    <a href="https://instagram.com/avesto.innovations"><img src="/static/icons/social/034-instagram.svg" width="32" /></a>
+    <a href="https://www.t.me/avestoinn"><img src="/static/icons/social/telegram.svg" width="32"></a>
+    <a href="https://www.github.com/avestoinn"><img src="/static/icons/social/039-github.svg" width="32"></a>
 </div>
 </body>
 </html>
