--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,10 @@
     <a class='secondary-button' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
 </div>
 
+<div class="credentials">
+<h5 style="display: flex; color: #444444">© СИ Искандарзода Беҳруз Дилшод - 2021. Ҳамаи ҳуқуқҳо ҳифз карда шудаанд</h5>
+</div>
+
 <div class="social-medias">
     <a href="https://facebook.com/avesto.inn"><img src="/static/icons/social/045-facebook.svg" width="32"></a>
     <a href="https://instagram.com/avesto.innovations"><img src="/static/icons/social/034-instagram.svg" width="32" /></a>
