--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<img class='logo' src="/static/logo-removebg.png" />
+<img class='logo' src="/static/logo-removebg.png"/>
 
 
 <div class='info-card'>
@@ -21,12 +21,12 @@
 </div>
 
 <div class='actions'>
-    <a class="secondary-button" href="tel://992900801441">Позвонить</a>
+    <a class="secondary-button" href="tel://+992900801441">Позвонить</a>
     <a class='secondary-button' href='mailto:avesto.inn@gmail.com'>Связаться по почте</a>
 </div>
 
 <div class="credentials">
-<h5 style="display: flex; color: #444444">© СИ Искандарзода Беҳруз Дилшод - 2021. Ҳамаи ҳуқуқҳо ҳифз карда шудаанд</h5>
+<h5 style="display: flex; color: #444444">© СИ Искандарзода Беҳруз Дилшод - 2021. Ҳамаи ҳуқуқҳо ҳифз карда шудаанд.</h5>
 </div>
 
 <div class="social-medias">
